--- a/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
+++ b/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
@@ -554,24 +554,9 @@
                                                                         <outlet property="delegate" destination="5qf-rx-WxD" id="OMT-U5-Fmw"/>
                                                                     </connections>
                                                                 </collectionView>
-                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G8n-Ef-7MG">
+                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G8n-Ef-7MG" customClass="GradientSliderView" customModule="spriteMaker" customModuleProvider="target">
                                                                     <rect key="frame" x="-5" y="70.333333333333329" width="298" height="21.666666666666671"/>
-                                                                    <subviews>
-                                                                        <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="-1" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="dJv-zX-KSH">
-                                                                            <rect key="frame" x="-2" y="0.0" width="302" height="22.666666666666668"/>
-                                                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                            <color key="minimumTrackTintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                            <color key="maximumTrackTintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                            <color key="thumbTintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                        </slider>
-                                                                    </subviews>
                                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                    <constraints>
-                                                                        <constraint firstItem="dJv-zX-KSH" firstAttribute="leading" secondItem="G8n-Ef-7MG" secondAttribute="leading" id="Kgc-Kd-Lab"/>
-                                                                        <constraint firstAttribute="trailing" secondItem="dJv-zX-KSH" secondAttribute="trailing" id="oiU-Kb-ubm"/>
-                                                                        <constraint firstAttribute="bottom" secondItem="dJv-zX-KSH" secondAttribute="bottom" id="uxq-PQ-Xxn"/>
-                                                                        <constraint firstItem="dJv-zX-KSH" firstAttribute="top" secondItem="G8n-Ef-7MG" secondAttribute="top" id="wsh-oa-gs2"/>
-                                                                    </constraints>
                                                                 </view>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Fez-5B-4PQ">
                                                                     <rect key="frame" x="-5" y="-4.6666666666666643" width="92" height="74.333333333333329"/>
@@ -636,7 +621,6 @@
                                                     <outlet property="colorPickerButton" destination="Met-E2-1tm" id="D9b-4b-13i"/>
                                                     <outlet property="colorPickerLabel" destination="Jfo-67-Tp3" id="Dlv-Fb-fVF"/>
                                                     <outlet property="currentColor" destination="Fez-5B-4PQ" id="YgE-zl-nri"/>
-                                                    <outlet property="slider" destination="dJv-zX-KSH" id="8hx-8J-6IH"/>
                                                     <outlet property="sliderView" destination="G8n-Ef-7MG" id="rFP-Dk-FrE"/>
                                                     <outlet property="superView" destination="EHP-V4-OSZ" id="MCM-a6-HZN"/>
                                                 </connections>
